fix(show): Date & length should in line with text & visible on mobile

--- a/assets/css/grid.css
+++ b/assets/css/grid.css
@@ -51,6 +51,10 @@
   padding: var(--space-around);
 }
 
+.space-around--all--half {
+  padding: calc(var(--space-around) / 2);
+}
+
 .separate {
   margin: calc(var(--space-around) * 2) 0;
 }
